code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: section_open
---
 +------------------------------------------------------------------------------------------------+
 |                                               ECC                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model--------------------------------------------------------------------------------+
 |                                                                                                |
 | ›  Model              + Select Model & Reasoning --------------------------------------------+ |
 |    Theme              |                                                                      | |
 |    Updates            |  Curren+------------------------------+                              | |
 |    Accounts           |  Reason|Model Shortcuts               |                              | |
 |    Agents             |        |                              |                              | |
 |    Prompts            |  GPT-5.|• Esc    Return to overview   |                              | |
 |    Skills             |  Latest|• Tab    Cycle sections       |s across knowledge, reasoning | |
 |    Auto Drive         |     XHi|• Shift+Tab  Cycle backwards  |for complex problems          | |
 |    Review             |     Hig|• ?      Toggle this help     |r complex or ambiguous proble | |
 |    Planning           |     Med|                              |f reasoning depth and latency | |
 |    Validation         |        |Press Esc to close            |                              | |
 |    Chrome             |  ↑↓ Nav+------------------------------+                              | |
 |    MCP                |                                                                      | |
 |  ↓ Notifications      +----------------------------------------------------------------------+ |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
